ädd register and login authentication module
